hphp/test/zend/bad/ext/spl/tests/SplObjectStorage_setInfo_invalid_parameter.php
<?php

$s = new SplObjectStorage();

var_dump($s->setInfo());

?>